--- a/package.json
+++ b/package.json
@@ -8,15 +8,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "1.4.3",
+    "@next-auth/prisma-adapter": "^1.0.1",
+    "@prisma/client": "^3.7.0",
     "next": "12.0.7",
+    "next-auth": "^4.0.6",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "autoprefixer": "^10.4.1",
     "eslint": "8.6.0",
     "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.5",
+    "prisma": "^3.7.0",
+    "tailwindcss": "^3.0.11",
     "typescript": "4.5.4"
   }
 }
